fix href bug and spacing  in blurb.html

--- a/assets/main.CSS
+++ b/assets/main.CSS
@@ -268,3 +268,9 @@ sup {
   color:#666;
   font-size: x-small;
 }
+
+
+.blurb {
+    margin-top: 40%;
+    padding-bottom: 10%;
+}   
